fix overflow x bakcgroudn
Adjusted various styles for responsiveness and layout.

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,8 @@
 body {
     background-image: url(background.png);
-    background-repeat: no-repeat;      
-    background-size: cover;            
-    background-position: center;       
     margin: 0;
+    background-size: cover;
+    overflow-x: hidden;
     font-family: 'Poppins', sans-serif;
     color: white;
     max-width: 100dvw;
@@ -11,7 +10,6 @@ body {
 
 .top {
     display: flex;
-    max-width: 100dvw;
     flex-direction: row;
     top: 0;
     right: 0;
@@ -22,7 +20,7 @@ body {
     gap: 60px;
     z-index: 100;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
 }
 
 .icons {
@@ -56,7 +54,7 @@ body {
     text-decoration: none;
     border-radius: 25px;
     transition: transform 0.3s ease;
-    font-size: 2dvh;
+    font-size: 2dvw;
     color: rgb(0, 0, 0);
     font-weight: bold;
 }
@@ -154,7 +152,7 @@ h1 {
     display: flex;
     justify-content: center;
     margin-top: 25dvh;
-    font-size: 50px;
+    font-size: 9dvw;
 }
 
 .redeem {
@@ -175,10 +173,11 @@ h1 {
     border-style: solid;
     border-color: white;
     background-color: #000000;
-    height: 50px;
+    height: 7dvw;
+    font-size: 3dvw;
     margin-left: -5dvw;
     margin-right: -5dvw;
-    border-radius: 30px;
+    border-radius: 55px;
     color: white;
     font-family: 'Poppins', sans-serif;
     transition: border-color 0.3s ease, transform 0.3s ease;
@@ -200,6 +199,7 @@ h1 {
     margin-right: -5dvw;
     padding: 5px 15px;
     border-radius: 40px;
+    font-size: 4dvw;
     color: black;
     font-weight: bold;
     transition: background-color 0.3s ease;
@@ -244,12 +244,11 @@ nav {
     right: 0;
     background-color: white;
     color: black;
-    padding: 15px 10px;
+    padding: 15px 100px;
     display: flex;
     width: 100%;
     justify-content:flex-start;
     align-items: center;
-    height: 40px
 }
 
 
@@ -274,7 +273,10 @@ nav {
 
 
 
-@media(min-width: 1000px) {
+@media(min-width: 1300px) {
+    .button {
+        font-size: 20px;
+    }
     .maininput {
         display: flex;
         justify-content: center;
@@ -298,4 +300,9 @@ nav {
         border-left: 2px solid rgb(94, 255, 94);
         border-radius: 20px;
     }
+
+    h1 {
+        font-size: 50px;
+    }
 }
+
